force-app/main/default/objects/Sentry_Correlation_Rule__mdt/Sentry_Correlation_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Rule-driven incident correlation metadata for multi-event threat detection.</description>
    <label>Sentry Correlation Rule</label>
    <pluralLabel>Sentry Correlation Rules</pluralLabel>
</CustomObject>