force-app/main/default/objects/Sentry_Correlation_Rule__mdt/fields/Escalation_Severity__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Severity__c</fullName>
    <label>Escalation Severity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>