force-app/main/default/objects/Sentry_Correlation_Rule__mdt/fields/Event_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Event_Pattern__c</fullName>
    <label>Event Pattern</label>
    <length>255</length>
    <type>TextArea</type>
</CustomField>