force-app/main/default/objects/Sentry_Correlation_Rule__mdt/fields/Minimum_Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Event_Count__c</fullName>
    <label>Minimum Event Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>