force-app/main/default/objects/Sentry_Correlation_Rule__mdt/fields/Minimum_Risk__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Risk__c</fullName>
    <label>Minimum Risk</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>