force-app/main/default/objects/Sentry_Correlation_Rule__mdt/fields/Time_Window_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Window_Minutes__c</fullName>
    <label>Time Window Minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>